添加主页json解析

--- a/index.html
+++ b/index.html
@@ -297,10 +297,7 @@
 <script type="application/javascript">
   $(function (){
       $.getJSON("db.json", function (data){
-        var $jsontip = $("#jsonTip");
         var strHtml = "123";
-        //存储数据的变量
-        $jsontip.empty();
         //清空内容
         $.each(data, function (infoIndex, info){
           strHtml += "姓名：" + info["name"] + "<br>";
@@ -308,8 +305,8 @@
           strHtml += "邮箱：" + info["email"] + "<br>";
           strHtml += "<hr>"
         })
-        $jsontip.html(strHtml);
-        //显示处理后的数据 
+        console.log(strHtml);
+        //显示处理后的数据
       })
   })
 </script>
